# str8

./: .coderabbit.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-single-platform.yml
common/: CMakeLists.txt
src/: str8.h  str8_checkpoints.c  str8_checkpoints.h  str8_debug.h  str8_header.c  str8_header.h  str8_memory.c  str8_memory.h  str8_simd.c  str8_simd.h
tests/: CMakeLists.txt  bench_getchar.c  bench_helper.h  bench_simd.c  test_checkpoints.c  test_header.c  test_helper.h  test_memory.c  test_simd.c
